Fix wrap on place show page

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -45,7 +45,7 @@ body {
     transition: color .2s ease 0.1s;
 }
 
-.color-white {
+.color-gray {
     color: #cecece;
     text-decoration: none;
 }
