--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -90,7 +90,7 @@ h1, h2, h3, h4 {
 }
 
 body {
-	background: url('paper_1.png'); 
+	// background: url('paper_1.png'); 
 	font-family: montserratultra_light, Arial, sans-serif;
 }
 .navbar.navbar-inverse {
